--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
 body{
-    background-color: blueviolet;
+    background-color: #ECCCB2;
 }
 h3{
     font-size: 50px;
+    font-family: 'Secular One', sans-serif;
 }
 .list-1{
     font-size: 25px;
 }
 .list-6{
     color: greenyellow;
+    font-family: 'Nanum Pen Script', cursive;
 }
 #name-1{
     font-size: 25px;
@@ -16,6 +18,8 @@ h3{
 .one{
     color: green;
     line-height: 18px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight:900
 }
 .new{
     color: royalblue;
@@ -27,7 +31,80 @@ h3{
 }
 a{
     text-decoration: none;
-}
-a{
     text-transform: uppercase;
+    text-indent: 50px;
+    color:green;
+    margin-top: 100px;
+}
+a:hover{
+    text-decoration: line-through;
+    text-transform:lowercase;
+    color:aqua;
+    background-color: brown;
+    font-size:x-large;
+}
+a:visited{
+    text-shadow: 10px 10px black;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+    color: black;
+
+}
+a:active {
+    text-transform:uppercase;
+}
+ul{
+    font-family: 'Lobster', cursive;
+    border: 3px solid red;
+    padding: 30px 40px 50px;
+    margin-bottom: 40px;
+    list-style: none;
+}
+h1{
+    font-family: 'Secular One', sans-serif;
+    font-style: bold;
+    /* font-variant:small-caps; */
+    text-transform: uppercase;
+}
+/* styling tables */
+table {
+    width: 100%;
+    border-collapse:collapse;
+}
+table, th, td {
+    border: 5px solid chocolate;
+}
+thead{
+    background-color: rgba(180, 45, 255, 0.3);
+    /* color: rgb(50, 45, 60 */
+    color: rgba,(203, 200, 218,0.9)
+}
+th{
+    text-align: center;
+    height: 50px;
+}
+tbody tr:nth-child(odd) {
+background-color: #EAE509;
+}
+tbody tr:nth-child(even) {
+    background-color: #3330E4;
+}
+.image-1 {
+    border-radius: 50%;
+    margin-top: 20px;
+}
+.image-2 {
+    border-radius: 50%;
+    margin-top: 20px;
+    margin-left: 30px;
+}
+.container {
+    width: 20%;
+    margin: 0px auto;
+}
+.gradient {
+    width: 400px;
+    height: 500px;
+    background-color: purple;
+    background-image: linear-gradient(to bottom right,blue,purple);
 }
